# kumir2

./: .gitignore  1.kum  Dockerfile  arduino_test_dockerfile  dockerfile.yaml
.github/workflows/: c-cpp.yml  tests.yml
cmake/kumir2/: kumir2_common.cmake
devel-doc/ArduinoCodeGenerator/: текст к презентации.docx
kumir_tests/: 1.kum  1.ps1  run_tests.ps1  test_script.py
kumir_tests/Examples/2/: 2.kum
kumir_tests/Expectations/: 2.c  bool_arr_var_exp.c  char_arr_var_exp.c  complex_conditional_operators.c  if_else.c  int_arr_var_exp.c  math_functions.kumir.c  multiply.c  not_or_and.c  pow.c  string_arr_var_exp.c  string_var_exp.c  switch.c
kumir_tests/Sources/: bool_arr_var_source.kum  bool_var_source.kum  char_arr_var_source.kum  char_var_source.kum  divide.kum  float_arr_var_source.kum  float_var_source.kum  int_arr_var_source.kum  int_var_source.kum  math_functions.kum  minus.kum  not_or_and.kum  plus.kum  string_arr_var_source.kum  string_var_source.kum  switch.kum  test_missing_exp.kum
kumir_tests/github_actions/: installation-and-testing-steps.txt
scripts/: gen_actor_source.py
share/kumir2/editor/: macros-kum-Arduino.xml
src/actors/arduino/: arduino.json  arduinomodule.cpp  arduinomodule.h
src/app/: kumir2-launcher.cpp
src/plugins/arduinocodegenerator/generators/: BreakGenerator.h  CMakeLists.txt  CommonMethodsProvider.cpp  CommonMethodsProvider.hpp  ConditionGenerator.h  ErrorGenerator.h  ExpressionCalculator.cpp  ExpressionCalculator.hpp  FunctionsGenerator.h  LoopGenerator.h  SwitchGenerator.h  VarInitializationGenerator.h  assertsGenerator.h  assignsGenerator.h  breaksGenerator.h  conditionsGenerator.h  errorsGenerator.h  functionsGenerator.h  generators.h  loopsGenerator.h  switchesGenerator.h  varInitializationsGenerator.h
src/plugins/arduinocodegenerator/generators/AssertGenerator/: AssertsGenerator.cpp  AssertsGenerator.hpp
src/plugins/arduinocodegenerator/generators/AssignsGenerator/: AssignsGenerator.cpp  AssignsGenerator.hpp
src/plugins/arduinocodegenerator/generators/ConditionalsGenerator/: ConditionalsGenerator.cpp  ConditionalsGenerator.hpp
src/plugins/arduinocodegenerator/generators/ErrorsGenerator/: ErrorsGenerator.cpp  ErrorsGenerator.hpp
src/plugins/arduinocodegenerator/generators/FunctionsGenerator/: FunctionsGenerator.cpp  FunctionsGenerator.hpp
src/plugins/arduinocodegenerator/generators/LoopsGenerator/: LoopGenerator.cpp  LoopGenerator.hpp
src/plugins/arduinoguiplugin/cmd-test/: CMakeLists.txt  check_item.cpp  check_item.h  check_item.ui  check_item_states.h  check_point.ui  check_steps.h  checkarduinoplugininitialization.cpp  checkarduinoplugininitialization.h  checkarduinoplugininitialization.ui  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  statusImages.qrc  test.sh
(+120 files in other folders)
